@@ -10,20 +10,9 @@ TeamX，功能不强但绝对小巧；基于 Luffy faas 平台构建。主要功
 * Issues（问题管理，如缺陷、需求...）
 	* 比BugFree还要简单，更清爽
 * Ticket （工单管理）
+  * 还是简单为主，为工作的透明和痕迹提供支持
 * 通知（需要一定的设置）
   * 支持钉钉、企业微信、飞信、QQ(酷Q)、自定义 webhook
-
-
-
-引擎包及大小说明：
-* bin/jt.jar （5m，服务器版，需要MySQL配合）
-* bin/jtl.jar （6.3m，单机版）
-
-
-
-支持环境：
-
-* jdk9, jdk10, jdk11, jdk12, jdk13, jdk14
 
 
 
@@ -34,66 +23,19 @@ TeamX，功能不强但绝对小巧；基于 Luffy faas 平台构建。主要功
 
 
 
-
 ### 三、入门教程视频
 
 * [https://www.ixigua.com/6851060650723656200/](https://www.ixigua.com/6851060650723656200/)
 
 
 
+### 四、部署说明
 
-
-### 四、安装说明
-
-#### （一）服务器模式安装和使用（即多人使用）
-
-* 使用服务器版启用（需要Mysql 5.6+ 配合）
-
-```
-java -jar jt.jar -add=teamx.noear -home=/ -init=/teamx/__init
-```
-
-* 或，使用单机版的服务器模式启用（这个简单......!!!）
-
-```
-java -jar jtl.jar -add=teamx.noear -home=/ -init=/teamx/__init  -model=2 -server.port=8080
-```
-
-* 或，使用Docker进行部署
-
-  参考：[《使用Docker部署.md》](使用Docker部署.md)
-
-* 然后
-
-1. 在浏览器里打开：http://x.x.x.x:8080
-2. 按界面提示配置数据库（提前准备个空的库；账号要有建表权限）*** [单机版跳过]
-3. 管理员账号：admin  密码：1234
-4. 其它账号，可自行注册或在后台添加
-
-
-
-#### （二）个人模式（即单人使用）
-
-* 使用单机版的桌面模式启动（需要JavaFx支持）
-
-```
-#基于JavaFx运行，效果像本地应用
-#
-java -jar jtl.jar -add=teamx.noear -home=/teamx/ -title=TeamX
-
-#jdk11+ 需要通过 --module-path --add-modules 添加JavaFx的包
-```
-
-* 或，使用单机版的浏览器模式启动
-
-```
-java -jar jtl.jar -add=teamx.noear -home=/teamx/ -title=TeamX -model=1
-```
-
-* 然后
-
-> 个人模式启动后会自动打开首页；不需要账号，直接进入。
-
+1. 使用 docker-compose 部署程序（配置参考 docker-compose.yml）
+2. 在浏览器里打开：http://x.x.x.x:8080
+3. 如果是集群版，按界面提示配置数据库（提前准备个空的库 teamx；账号要有建表权限；单机版跳过
+4. 管理员账号：admin  密码：1234
+5. 其它账号，可自行注册或在后台添加
 
 
 
